# sardis

./: .dockerignore  .env.example  .env.mainnet  .env.production.example  .gcloudignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .upptimerc.yml  .vercelignore  ALERT_SYSTEM_COMPLETE.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTINUE_IMPLEMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  DISCLAIMER.md  Dockerfile  HACKATHON_GUARD_INVENTORY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INVESTMENT_NARRATIVE.md  LAUNCH_CHECKLIST.md  LICENSE  LICENSE.txt  NEWPLAN.md  NOTICE.txt  OPERATIONAL_CHECKLIST.md  OPERATIONAL_PLAN.md  OSS_RESEARCH.md  QUICKSTART.md  README.md  RUNBOOK.md  SARDIS_DEEP_CODE_AUDIT.md  SARDIS_DEPLOYMENT_INVESTMENT_AUDIT.md  SARDIS_TECHNICAL_AUDIT_REPORT.md  (+35 more)
.claude/: CLAUDE.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SOCIAL_PREVIEW.md  SUPPORT.md  dependabot.yml  pull_request_template.md  required-checks.json
.omc/: ralplan-state.json  ultraqa-state.json
agent_demo/: __init__.py  investor_demo.py  run_demos.py  shopping_agent.py  tools.py
alembic/: env.py
api/: index.py  requirements.txt
api-proxy/: package.json  vercel.json
canvases/: index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
contracts/: .env.example  AUDIT_SURFACE.md  DEPLOYMENT_GUIDE.md  README.md  deploy.sh  foundry.toml
dashboard/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
dashboard-next/: .env.example  next.config.mjs  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
demo/: __init__.py  console.py  run_demo.py  scenarios.py
demos/: README.md  demo_escrow.py  demo_multi_agent.py  demo_payment_flow.py  demo_trust_scoring.py  full_payment_demo.py  mcp_demo_flow.md  mvp_base_sepolia_demo.py  sardis_connect_e2e_demo.py  tempo_e2e_demo.py
demos/arc-circle-mandate/: .env.example  README.md  demo.py  pyproject.toml
demos/langchain-agent-pay/: Makefile  README.md  demo.py  expected-output.txt  pyproject.toml
demos/tempo-accounts-mandate/: .env.example  README.md  demo.py  pyproject.toml
demos/x402-payment/: README.md  demo.py  expected-output.txt  pyproject.toml
deploy/: cloudbuild.yaml
docs/: APPROVAL_FLOW.md  ARCHITECTURE_PIVOT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_V2.md  COMPREHENSIVE_AUDIT_REPORT_V3_FINAL.md  CUSTOMER_INTERVIEW_LIST.md  DEMO_API_RUNBOOK.md  DEMO_FULL_RUNBOOK.md  DEMO_SCRIPT.md  DEPLOYMENT-GUIDE-V2.md  DEPLOYMENT.md  INCIDENT_PLAYBOOK.md  LEGAL_OPINION_RESEARCH.md  MARKET_VALIDATION_REPORT.md  NICHE_SELECTION.md  NON_CUSTODIAL_MIGRATION.md  PIVOT_OPTIONS.md  PIVOT_STRATEGY_SUMMARY.md  POSITIONING.md  PRODUCTION_DEPLOYMENT.md  README.md  RISK_MITIGATION_SUMMARY.md  ROADMAP.md  RUNBOOK.md  SECURITY_AUDIT_RESEARCH.md  YC_PITCH_SPRING_2026.md  action-plan.md  ap2-payment-flow.md  api-reference.md  architecture.md  audit-preparation.md  blockchain-integration.md  compliance.md  contracts-deployment.md  development.md  executive-summary-v2.md  executive-summary.md  gap-analysis-v2.md  gap-analysis.md  integration-guide.md  (+20 more)
docs-site/: .env.example  .gitignore  mdx-components.tsx  package.json  tsconfig.json  vercel.json
drafts/: demo-email-stripe-mpp.md
examples/: README.md  agent_to_agent.py  alert_integration_example.py  anthropic_agent_sdk.py  api_demo.py  budget_allocation_demo.py  crewai_finance_team.py  event_webhooks.py  gas_optimizer_demo.py  google_adk_agent.py  langchain_sardis_agent.py  openai_agents_payment.py  quickstart_5min.py  simple_payment.py  vercel_ai_payment.ts
landing/: .env.demo.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.js
landing-next/: next.config.ts  package.json  vercel.json
legacy/: __init__.py
legacy_tests/: __init__.py  test_ap2_payment_api.py  test_auth.py  test_integration.py  test_ledger.py  test_ledger_service.py  test_limits.py  test_mandate_chain_verifier.py  test_merchant_service.py  test_payment_integration.py  test_payment_orchestrator.py  test_postgres_ledger.py  test_replay_cache.py  test_webhooks.py
mobile/: .gitignore  App.tsx  README.md  app.json  metro.config.js  package.json  tsconfig.json
monitoring/: alerts.yml  facility-gate-prometheus-rules.yml
playground/: README.md  index.html  vercel.json
research/: ai-agent-payment-threat-model.md  build-plan-2026-03-10.md  feature-strategy-2026-03-10.md  fraud-detection-compliance-landscape-2026-03-11.md  investor-diligence-2026-03-10-refresh.md  investor-diligence-2026-03-10.md  phase2-notes.md  phase2-target-universe.csv  phase2-target-universe.md  phase2_target_universe.md  phase3-partial-contact-list-2026-03-10.md  phase3-tier1-contact-map.csv  phase3-tier1-contact-map.md  phase3-top10-multithread-contact-map.csv  (+1 more)
sandbox/: README.md  seed_data.json  (+2 more)
sardis-api/: pyproject.toml
sardis-api/src/sardis_api/: __init__.py  main.py
sardis-api/src/sardis_api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
sardis-api/src/sardis_api/routers/: agents.py  ap2.py  auth.py  ledger.py  mandates.py  marketplace.py  wallets.py
sardis-chain/: README.md  pyproject.toml
sardis-chain/src/sardis_chain/: executor.py
sardis-compliance/: pyproject.toml
sardis-compliance/src/sardis_compliance/: __init__.py  checks.py
sardis-ledger/: pyproject.toml
sardis-ledger/src/sardis_ledger/: __init__.py  records.py
sardis-protocol/: README.md  pyproject.toml
sardis-protocol/src/sardis_protocol/: __init__.py  schemas.py  storage.py  verifier.py
sardis-sdk-python/: README.md  pyproject.toml
sardis-sdk-python/src/sardis_sdk/: __init__.py  client.py
sardis-sdk-python/src/sardis_sdk/models/: agent.py  base.py  marketplace.py  payment.py  webhook.py
sardis-sdk-python/src/sardis_sdk/resources/: holds.py  ledger.py  payments.py  webhooks.py
sardis-wallet/: README.md  pyproject.toml
sardis-wallet/src/sardis_wallet/: manager.py
(+2306 files in other folders)
