[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sardis"
version = "1.1.0"
description = "Open-source financial authority layer for AI agents with non-custodial wallets, signed mandates, and policy-gated execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "Efe Baran Durmaz", email = "efe@sardis.dev" }
]
keywords = [
    "sardis",
    "payments",
    "ai-agents",
    "stablecoin",
    "blockchain",
    "fintech",
    "mcp",
    "langchain",
    "wallet",
    "policy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "sardis-sdk>=1.0.0",
    "sardis-core>=1.0.0",
    "sardis-cli>=1.0.0",
    "pydantic>=2.6,<3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
chain = ["sardis-chain>=1.0.0"]
compliance = ["sardis-compliance>=1.0.0"]
ledger = ["sardis-ledger>=1.0.0"]
wallet = ["sardis-wallet>=1.0.0"]
cards = ["sardis-cards>=1.0.0"]
ramp = ["sardis-ramp>=1.0.0"]
api = ["sardis-api>=1.0.0"]
protocols = [
    "sardis-protocol>=1.0.0",
    "sardis-a2a>=1.0.0",
    "sardis-ucp>=1.0.0",
]
checkout = ["sardis-checkout>=1.0.0"]
# Framework integrations
crewai = ["sardis-crewai>=1.0.0"]
langchain = ["sardis-langchain>=1.0.0"]
autogpt = ["sardis-autogpt>=1.0.0"]
openai-agents = ["sardis-openai-agents>=1.0.0"]
adk = ["sardis-adk>=1.0.0"]
browser-use = ["sardis-browser-use>=1.0.0"]
composio = ["sardis-composio>=1.0.0"]
guardrails = ["sardis-guardrails>=1.0.0"]
all = [
    "sardis[chain,compliance,ledger,wallet,cards,ramp,api,protocols,checkout,guardrails]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.112",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.urls]
Homepage = "https://sardis.sh"
Documentation = "https://docs.sardis.sh"
Repository = "https://github.com/EfeDurmaz16/sardis"
Changelog = "https://docs.sardis.sh/changelog"

[tool.hatch.build.targets.wheel]
packages = ["sardis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "contracts/lib",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "N", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # Depends() in defaults — standard FastAPI pattern
    "B904",   # raise from — too noisy for existing code
    "E402",   # module-level import order — conditional imports
    "N806",   # variable in function should be lowercase — false positive on constants
    "N801",   # class name should use CapWords — false positive on test fixtures
    "N818",   # exception name should end with Error
    "B023",   # function definition does not bind loop variable
    "B017",   # assertRaises(Exception) too broad
    "E741",   # ambiguous variable name
    "B027",   # empty method in abstract class
    "F821",   # undefined name — forward references in type annotations
    "SIM102", # collapsible if — readability preference
    "SIM105", # contextlib.suppress — readability preference
    "SIM108", # ternary operator — readability preference
    "SIM113", # enumerate — style preference
    "SIM103", # return condition directly — style preference
    "SIM117", # combine with statements — style preference
    "PLC0415", # import not at top level — conditional imports
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "UP035",  # deprecated import — compatibility
    "E722",   # bare except
    "N802",   # function name should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F811", "RUF022"]
"packages/sardis-sdk-python/src/sardis_sdk/__init__.py" = ["F401", "F811", "RUF022"]
"packages/sardis-gpt/__init__.py" = ["N999"]
"tests/**" = ["F401", "F811", "F841", "E722", "B007", "N802"]
"demos/**" = ["F401", "F841"]
"examples/**" = ["F401", "F841"]

[tool.uv.sources]
sardis-cli = { path = "packages/sardis-cli", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.112",
    "mypy>=1.8",
    "ruff>=0.2",
    # Required by root-level tests that import from sardis-api, sardis-chain, etc.
    "fastapi>=0.115,<1.0",
    "starlette>=0.41",
    "python-multipart>=0.0.9",
    "web3>=6.0",
    "prometheus-client>=0.20",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13",
    "greenlet>=3.0,<4.0",
    "psycopg[binary]>=3.1,<4.0",
    "PyJWT>=2.12.0",
    "respx>=0.22.0",
    "PyNaCl>=1.5",
]
