[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sardis-workspace"
version = "1.1.0"
description = "Sardis monorepo — workspace coordinator. The published Python SDK lives in packages/sardis/ (PyPI: sardis)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "Efe Baran Durmaz", email = "efe@sardis.dev" }
]
keywords = [
    "payments",
    "ai-agents",
    "stablecoin",
    "blockchain",
    "fintech",
    "mcp",
    "langchain",
    "wallet",
    "policy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6,<3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# All Sardis sub-functionality now lives in the umbrella `sardis` package.
# Install with extras: `pip install sardis[langchain,crewai,openai-agents,...]`
# See packages/sardis/pyproject.toml for the full extras list.
all = [
    "sardis[anthropic,langchain,crewai,openai-agents,autogpt,browser-use,composio,adk,a2a,ai-sdk,postgres,redis,immudb,chain]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.112",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.urls]
Homepage = "https://sardis.sh"
Documentation = "https://docs.sardis.sh"
Repository = "https://github.com/EfeDurmaz16/sardis"
Changelog = "https://docs.sardis.sh/changelog"


[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short -m 'not e2e' --import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "ap2: mark tests that validate AP2 protocol behavior",
    "anyio: mark test as async",
    "requires_db: mark test as requiring PostgreSQL database",
    "protocol_conformance: mark tests that validate protocol-level invariants",
    "ucp: mark tests that validate UCP protocol behavior",
    "x402: mark tests that validate x402 protocol behavior",
    "e2e: mark test as end-to-end (skipped by default)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "contracts/lib",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "N", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # Depends() in defaults — standard FastAPI pattern
    "B904",   # raise from — too noisy for existing code
    "E402",   # module-level import order — conditional imports
    "N806",   # variable in function should be lowercase — false positive on constants
    "N801",   # class name should use CapWords — false positive on test fixtures
    "N818",   # exception name should end with Error
    "B023",   # function definition does not bind loop variable
    "B017",   # assertRaises(Exception) too broad
    "E741",   # ambiguous variable name
    "B027",   # empty method in abstract class
    "F821",   # undefined name — forward references in type annotations
    "SIM102", # collapsible if — readability preference
    "SIM105", # contextlib.suppress — readability preference
    "SIM108", # ternary operator — readability preference
    "SIM113", # enumerate — style preference
    "SIM103", # return condition directly — style preference
    "SIM117", # combine with statements — style preference
    "PLC0415", # import not at top level — conditional imports
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "UP035",  # deprecated import — compatibility
    "E722",   # bare except
    "N802",   # function name should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F811", "RUF022"]
"packages/sardis-sdk-python/src/sardis_sdk/__init__.py" = ["F401", "F811", "RUF022"]
"packages/sardis-gpt/__init__.py" = ["N999"]
"tests/**" = ["F401", "F811", "F841", "E722", "B007", "N802"]
"demos/**" = ["F401", "F841"]
"examples/**" = ["F401", "F841"]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.sources]
sardis = { path = "packages/sardis", editable = true }
sardis-reference-api = { path = "apps/api", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.112",
    "mypy>=1.8",
    "ruff>=0.2",
    # Root-level integration tests import from the reference API + umbrella
    "fastapi>=0.115,<1.0",
    "starlette>=0.41",
    "python-multipart>=0.0.9",
    "respx>=0.22.0",
    "PyJWT>=2.12.0",
    "PyNaCl>=1.5",
    "numpy>=2.0",
    "scipy>=1.11",
    # Reference API installs its runtime deps (FastAPI extras, prometheus-client,
    # SQLAlchemy, web3, etc.) so root-level integration tests can import server.
    "sardis-reference-api",
]
