[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sardis-ledger"
version = "0.1.0"
description = "Append-only ledger + receipt engine for Sardis"
authors = [{name = "Sardis"}]
requires-python = ">=3.11"
dependencies = [
    "sardis-core",
    "sqlalchemy>=2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sardis_ledger"]
