[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sardis-sdk"
version = "0.1.0"
description = "Python SDK for the Sardis stablecoin execution layer"
authors = [{name = "Sardis"}]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "sardis-core @ file://../sardis-core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sardis_sdk"]
