[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sardis-wallet"
version = "0.1.0"
description = "Wallet orchestration and spending policy engine for Sardis"
authors = [{name = "Sardis"}]
requires-python = ">=3.11"
dependencies = [
    "sardis-core @ file://../sardis-core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sardis_wallet"]
