[project]
name = "sardis-arc-circle-mandate-demo"
version = "0.1.0"
description = "Self-contained demo — Sardis spending mandates on Arc testnet via Circle developer-controlled wallets"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
]

[tool.uv.sources]
sardis-wallet = { path = "../../packages/sardis-wallet", editable = true }

[project.optional-dependencies]
live = [
    "httpx>=0.27",
]
